# molt-hub

./: .env.example  .gitignore  Cargo.toml  PLAN.md  README.md  TODO.md  dev.sh  package-lock.json  package.json  release.sh
.claude/: launch.json  team.yaml
.claude/projects/-Users-fdot-code-experiments-molt-hub/memory/: feedback_autonomous.md  feedback_grep_before_explore.md  feedback_kanban_settings.md  feedback_native_ui.md  feedback_small_fixes_direct.md  sprint1_complete.md  sprint1_workflow.md
.claude/tackline/memory/: handoff-2026-03-23-session2.md  handoff-2026-03-23-sprint2.md  handoff-2026-03-23-wave2.md  handoff-2026-03-23-wave6.md  handoff-2026-03-23-wave9.md  handoff-2026-03-23.md
.claude/tackline/memory/scratch/: blossom-checkpoint.md  meeting-panelists.md  sprint-checkpoint.md
.claude/tackline/memory/sessions/: 2026-03-23T02-08-34Z.md  2026-03-23T04-23-58Z.md  2026-03-23T07-48-24Z.md  2026-03-23T19-32-22Z.md  2026-03-23T19-36-09Z.md
.claude/tackline/memory/team/: decisions.md  retro-history.md
.github/workflows/: deploy-oauth-bridge.yml
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  machine.rs  model.rs  project.rs  summaries.rs  templates.rs  transitions.rs
crates/core/src/events/: mod.rs  schema.rs  store.rs  types.rs
crates/core/src/integrations/: config.rs  jira.rs  mod.rs
crates/harness/: Cargo.toml
crates/harness/src/: acp.rs  adapter.rs  claude.rs  cli.rs  health.rs  lib.rs  supervisor.rs  worktree.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: actors.rs  approvals.rs  attention.rs  env_bootstrap.rs  hooks.rs  lib.rs  main.rs  scheduler.rs  seed.rs  serve.rs  summarizer.rs  system.rs  ws.rs  ws_broadcast.rs
crates/server/src/agents/: handlers.rs  history_store.rs  mod.rs  output_buffer.rs  worktree_registry.rs
crates/server/src/attention/: classifier.rs  mod.rs  priority.rs  router.rs  summary.rs
crates/server/src/audit/: handlers.rs  mod.rs  writer.rs
crates/server/src/boards/: handlers.rs  mod.rs
crates/server/src/credentials/: alias_index.rs  fd_inject.rs  keyring_store.rs  memory_store.rs  mod.rs
crates/server/src/events/: handlers.rs  mod.rs
crates/server/src/integrations/: github_app.rs  github_client.rs  github_handlers.rs  github_import_service.rs  github_oauth.rs  github_oauth_handlers.rs  handlers.rs  import_service.rs  integration_params.rs  jira_client.rs  jira_oauth_handlers.rs  mod.rs  oauth.rs  oauth_clients.rs  oauth_common.rs  oauth_handlers.rs  oauth_redirect.rs
crates/server/src/pipeline/: handlers.rs  mod.rs  pipeline_config_store.rs
crates/server/src/projects/: handlers.rs  mod.rs  runtime.rs
crates/server/src/runtime/: boards_store.rs  mod.rs
crates/server/src/settings/: file_store.rs  handlers.rs  mod.rs  model.rs  store.rs  typed_handlers.rs
crates/server/tests/: actor_lifecycle.rs  api_integration.rs  approval_flow.rs  attention_flow.rs  stage_hooks_lifecycle.rs
crates/server/tests/fixtures/: github_app_test_rsa.pem
crates/tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/tauri/capabilities/: default.json
crates/tauri/icons/: icon.icns
crates/tauri/permissions/: oauth.toml
crates/tauri/src/: main.rs
oauth-bridge/: README.md  github.html  jira.html  redirect-uris.json
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/e2e/: playwright.config.ts  smoke.spec.ts
ui/src/: App.tsx  index.tsx
ui/src/components/: ConnectionStatus.tsx
ui/src/components/AgentChat/: AgentChat.module.css  AgentChat.tsx  index.ts
ui/src/components/HookActivityToast/: HookActivityToast.module.css  HookActivityToast.tsx
ui/src/components/ImportIssuesMenu/: ImportIssuesMenu.module.css  ImportIssuesMenu.tsx
ui/src/components/PriorityBadge/: PriorityBadge.module.css  PriorityBadge.tsx  index.ts  priorityTypes.ts
ui/src/components/ProjectSwitcher/: index.tsx
ui/src/components/StatusIndicator/: StatusIndicator.module.css  StatusIndicator.module.css.d.ts  StatusIndicator.tsx  index.ts  statusTypes.ts
ui/src/keyboard/: CommandPalette.module.css  CommandPalette.tsx  HelpOverlay.module.css  HelpOverlay.tsx  KeyboardManager.tsx  chords.ts  commands.ts  useFocusManager.ts  useGridFocusManager.ts
ui/src/keyboard/__tests__/: chords.test.ts  commands.test.ts  useFocusManager.test.ts  useGridFocusManager.test.ts
ui/src/layout/: AgentList.module.css  AgentList.tsx  AppLayout.module.css  AppLayout.tsx  BoardList.module.css  BoardList.tsx  Sidebar.module.css  Sidebar.tsx  StatusBar.module.css  StatusBar.tsx  TopBar.module.css  TopBar.tsx  agentListUtils.ts  attentionStore.ts
ui/src/layout/__tests__/: AgentList.test.ts  AppLayout.test.ts  TopBar.test.ts  agentStoreApi.test.ts  attentionStore.test.ts  navActive.test.ts
ui/src/lib/: api.ts  hookToasts.ts  virtual.ts  workspace.ts  ws.ts
ui/src/lib/__tests__/: api.test.ts  ws.test.ts
ui/src/stores/: metricsStore.ts  projectStore.ts
ui/src/stores/__tests__/: metricsStore.test.ts
ui/src/styles/: theme.css
ui/src/types/: chat.ts  domain.ts  index.ts  ws.ts
ui/src/views/AgentDetail/: AgentDetailView.module.css  AgentDetailView.tsx  AgentMeta.module.css  AgentMeta.tsx  OutputStream.module.css  OutputStream.tsx  SteerChat.module.css  SteerChat.tsx  agentStore.ts  steerStore.ts
ui/src/views/Agents/: AgentsView.module.css  AgentsView.tsx
ui/src/views/AiTutor/: AiTutorChat.module.css  AiTutorChat.tsx  AiTutorView.tsx  tutorStore.ts
ui/src/views/Board/: BoardColumn.module.css  BoardColumn.tsx  BoardPage.tsx  BoardView.module.css  BoardView.tsx  ColumnEditor.module.css  ColumnEditor.tsx  TaskCard.module.css  TaskCard.tsx  boardStore.ts
ui/src/views/Boards/: BoardsView.module.css  BoardsView.tsx
ui/src/views/CodeChat/: CodeChatView.module.css  CodeChatView.tsx
ui/src/views/HowItWorks/: HowItWorksView.module.css  HowItWorksView.tsx
ui/src/views/MissionControl/: InboxSidebar.module.css  InboxSidebar.tsx  MissionColumn.module.css  MissionColumn.module.css.d.ts  MissionColumn.tsx  MissionControlView.module.css  MissionControlView.module.css.d.ts  MissionControlView.tsx  (+9 more)
(+38 files in other folders)
