[workspace]
members = [
    "crates/core",
    "crates/server",
    "crates/harness",
    "crates/tauri",
]
resolver = "2"

[workspace.package]
name = "molt-hub"
version = "0.1.0"
edition = "2021"
authors = ["Molt Hub Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# HTTP / WebSocket
axum = { version = "0.7", features = ["ws"] }

# IDs
ulid = { version = "1", features = ["serde"] }

# Error handling
thiserror = "2"

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Concurrent hashmaps
dashmap = "6"

# Templating
handlebars = "6"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Static file serving
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Open browser
open = "5"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Cryptographic random number generation
rand = "0.8"

# SHA-2 hash family (for PKCE code challenge)
sha2 = "0.10"

# Base64 encoding (for PKCE verifier / challenge)
base64 = "0.22"

# System keychain
keyring = "3"

# Platform directories (XDG / macOS conventions)
dirs = "6"

# Low-level Unix bindings
libc = "0.2"
