[package]
name = "molt-hub-harness"
version.workspace = true
edition.workspace = true

[dependencies]
molt-hub-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
agent-client-protocol = { version = "0.10", features = ["unstable_session_usage"] }
tokio-util = { version = "0.7", features = ["compat"] }

[dev-dependencies]
tempfile = "3"
