[package]
name = "molt-hub-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "molt-hub"
path = "src/main.rs"

[dependencies]
molt-hub-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
