[package]
name = "molt-hub-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "molt-hub"
path = "src/main.rs"

[dependencies]
molt-hub-core = { path = "../core" }
molt-hub-harness = { path = "../harness" }
keyring = { workspace = true }
libc = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tower-http = { workspace = true }
open = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
serde_yaml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
