[package]
name = "molt-hub-desktop"
version = "0.1.0"
edition = "2021"
description = "Tauri v2 desktop shell for Molt Hub"

[[bin]]
name = "molt-hub-desktop"
path = "src/main.rs"

[dependencies]
molt-hub-server = { path = "../server" }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
axum = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
